--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Freezy has had it with Arthur😭</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">30 minutes ago</div>
+                        <div class="date">49 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Short Trades: Profitable, Yet Underperforming! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>The Key to Transformation | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>TRYING JAPANS HIGHEST RATED CANDY</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -277,7 +277,7 @@
                     <div class="video-info">
                         <h3>Noone Believed Him?!</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -981,7 +981,7 @@
                     <div class="video-info">
                         <h3>Classic Roman Porchetta! tender & juicy #italianfood #cooking #recipe</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -2191,7 +2191,7 @@
                     <div class="video-info">
                         <h3>Juicy. Melty. Perfect. Cheeseburger #food #shorts</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">2 weeks ago</div>
+                        <div class="date">3 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>Short Trades: Profitable, Yet Underperforming! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7942,7 +7942,7 @@
                         <div class="video-info">
                             <h3>The Key to Transformation | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9494,7 +9494,7 @@
                         <div class="video-info">
                             <h3>Classic Roman Porchetta! tender & juicy #italianfood #cooking #recipe</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -9626,7 +9626,7 @@
                         <div class="video-info">
                             <h3>Juicy. Melty. Perfect. Cheeseburger #food #shorts</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">2 weeks ago</div>
+                            <div class="date">3 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Freezy has had it with Arthur😭</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">30 minutes ago</div>
+                            <div class="date">49 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10265,7 +10265,7 @@
                         <div class="video-info">
                             <h3>TRYING JAPANS HIGHEST RATED CANDY</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10276,7 +10276,7 @@
                         <div class="video-info">
                             <h3>Noone Believed Him?!</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
