--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Understanding Focus, Distraction, and Universal Awareness</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">13 minutes ago</div>
+                        <div class="date">40 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Let’s make a Connors RSI trading strategy</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Short Trades: Profitable, Yet Underperforming! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Let spinning some pizzas dough #pizza #pizza #pizzastreetfood #food #streetfood</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -970,7 +970,7 @@
                     <div class="video-info">
                         <h3>Gold technical analysis in 5 minutes....</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -1696,7 +1696,7 @@
                     <div class="video-info">
                         <h3>What's the Probability of a Lost Decade in the S&P 500?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5776,7 +5776,7 @@
                         <div class="video-info">
                             <h3>Let’s make a Connors RSI trading strategy</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5787,7 +5787,7 @@
                         <div class="video-info">
                             <h3>Short Trades: Profitable, Yet Underperforming! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5952,7 +5952,7 @@
                         <div class="video-info">
                             <h3>Gold technical analysis in 5 minutes....</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -6194,7 +6194,7 @@
                         <div class="video-info">
                             <h3>What's the Probability of a Lost Decade in the S&P 500?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Understanding Focus, Distraction, and Universal Awareness</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">13 minutes ago</div>
+                            <div class="date">40 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>Let spinning some pizzas dough #pizza #pizza #pizzastreetfood #food #streetfood</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
